--- a/src/features/pages/home/trade-types/styles.module.scss
+++ b/src/features/pages/home/trade-types/styles.module.scss
@@ -1,3 +1,4 @@
+@use 'features/styles/theme/theme-mixins' as *;
 .item_container {
     inline-size: 32rem;
     min-block-size: 15rem;
@@ -5,4 +6,10 @@
 
 .item_learn_more {
     align-self: center;
+}
+
+.item_description {
+    @include breakpoints(tablet-large) {
+        min-block-size: 10rem;
+    }
 }
